--- a/globals.css
+++ b/globals.css
@@ -27,6 +27,24 @@ button {
     margin-right: 30px;
 }
 
+img {
+    height: 50px;
+    width: auto;
+    border-radius: 24px;
+    margin-right: 15px;
+}
+
+#header>div.user-section.mt>div>div>span>p {
+    font-size: 13px;
+}
+
+.user-intro {
+    display: inline-block;
+    font-weight: bold;
+    margin-top: 5px;
+    position: absolute;
+}
+
 .user-profile {
     position: absolute;
     right: 0;
@@ -59,7 +77,6 @@ button {
 }
 
 #container {
-    display: grid;
     height: 100vh;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: 1fr auto;
@@ -67,7 +84,6 @@ button {
 
 
 #sidebar {
-    display: grid;
     grid-row: 1;
     grid-column: 1;
     background-color: #1992d4;
@@ -79,17 +95,42 @@ button {
 }
 
 #header {
-    display: flex;
-    display: flex;
-    justify-content: flex-start;
-    flex-direction: row;
     padding-left: 2rem;
     padding-top: 2rem;
     height: 100vh;
-
 }
 
 #sidebar>ul>b>span>li {
     padding-bottom: 2rem;
     font-weight: 900;
+}
+
+#sidebar>ul>b>li:nth-child(8) {
+    padding-top: 2rem;
+}
+
+#sidebar,
+.user-profile,
+.user-section,
+header,
+article,
+.buttons,
+#container {
+    display: grid;
+}
+
+article {
+    grid-row: 2 / 2;
+    height: 100px;
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    border-radius: 5px;
+    border: 1px solid blue;
+}
+
+.container {
+    padding: 2px 16px;
 }
