--- a/globals.css
+++ b/globals.css
@@ -86,20 +86,9 @@ img {
     height: 4%;
     padding-left: 1rem;
     margin-top: 1rem;
-    /* margin-left: 90px; */
     position: absolute;
     top: 0;
     justify-content: center;
-    /* background-color: #e2e8f0;
-    border: 0;
-    border-radius: 10px;
-    width: 670px;
-    height: 25px;
-    padding-left: 10px;
-    margin-top: 10px;
-    margin-left: 90px;
-    position: absolute;
-    top: 0; */
 }
 
 .buttons {
@@ -122,6 +111,7 @@ img {
     color: white;
     padding-left: 1rem;
     padding-top: 1rem;
+    min-width: 120px;
     height: 100%;
     grid-row: 1 / 3;
 }
@@ -132,12 +122,18 @@ img {
     height: 100vh;
 }
 
-#sidebar>ul>b>span>li {
+
+#sidebar>ul>li {
+    font-weight: bold
+}
+
+
+#sidebar>ul>span>li {
     padding-bottom: 2rem;
     font-weight: 900;
 }
 
-#sidebar>ul>b>li:nth-child(8) {
+#sidebar>ul>li:nth-child(8) {
     padding-top: 2rem;
 }
 
@@ -145,24 +141,22 @@ img {
 .user-profile,
 .user-section,
 header,
-article,
 .buttons,
 #container {
     display: grid;
 }
 
-article {
-    grid-row: 2 / 2;
-    height: 100px;
+#projects-grid {
+    width: 500px;
+    row-gap: 15px;
+    grid-row: 2;
+    grid-column: 2;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    column-gap: 15px;
 }
 
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
-    border-radius: 5px;
+#projects-grid>div {
     border: 1px solid blue;
-}
-
-.container {
-    padding: 2px 16px;
 }
