--- a/globals.css
+++ b/globals.css
@@ -1,4 +1,5 @@
 * {
+
     margin: 0;
     padding: 0;
     border: 0;
@@ -9,8 +10,13 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
+#main {
+    background-color: #e1e8f0;
+}
+
 ul,
 li {
+    font-weight: bold;
     padding-left: 0;
     justify-content: left;
     list-style-type: none;
@@ -34,7 +40,7 @@ img {
     margin-right: 15px;
 }
 
-#header>div.user-section.mt>div>div>span>p {
+.user-intro-text {
     font-size: 13px;
 }
 
@@ -52,8 +58,8 @@ img {
     position: absolute;
 }
 
-#header>div.user-profile.mt>p {
-    margin-top: 5px;
+.profile-name {
+    margin-top: -1px;
 }
 
 .user-profile {
@@ -61,10 +67,10 @@ img {
     position: absolute;
     right: 0;
     top: -20px;
-    margin-right: 12vh;
+    margin-right: 28vh;
 }
 
-#header>div.user-profile.profile.mt>div>img {
+.profile-image {
     height: 30px;
     width: auto;
 }
@@ -75,6 +81,7 @@ img {
 }
 
 .user-section {
+
     margin-right: 20px
 }
 
@@ -93,8 +100,9 @@ img {
 
 .buttons {
     position: absolute;
-    right: 0;
     grid-template-columns: 1fr 1fr 1fr;
+    margin-left: 740px;
+    margin-top: -35px;
 }
 
 #container {
@@ -112,7 +120,7 @@ img {
     padding-left: 1rem;
     padding-top: 1rem;
     min-width: 120px;
-    height: 100%;
+    height: 56vw;
     grid-row: 1 / 3;
 }
 
@@ -128,19 +136,18 @@ img {
 }
 
 
-#sidebar>ul>span>li {
+.dashboard-main>li {
     padding-bottom: 2rem;
     font-weight: 900;
 }
 
-#sidebar>ul>li:nth-child(8) {
+.settings-spacing>li {
     padding-top: 2rem;
 }
 
 #sidebar,
 .user-profile,
 .user-section,
-header,
 .buttons,
 #container {
     display: grid;
@@ -159,4 +166,36 @@ header,
 
 #projects-grid>div {
     border: 1px solid blue;
+}
+
+.iconify {
+    margin-right: 10px;
+    margin-bottom: -1px;
+}
+
+hr {
+    display: block;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: inset;
+    border-width: 1px;
+}
+
+article h1 {
+    float: right;
+    margin-top: -480px;
+    margin-right: 243px;
+
+}
+
+#card {
+    margin-right: 113px;
+    margin-top: -450px;
+    position: absolute;
+    right: 0;
+    border: 1px solid blue;
+    border-radius: 6px;
+    width: 250px;
 }
