--- a/globals.css
+++ b/globals.css
@@ -1,201 +1,45 @@
-* {
+#grid {
+    display: grid;
+    gap: 15px;
+    justify-content: center;
+    grid-template-columns: 300px 500px;
+}
 
+aside {
+    border: solid 1px;
+}
+
+
+.sidebar {
+    top: 0;
+    z-index: 0;
+    left: 0;
     margin: 0;
     padding: 0;
-    border: 0;
-    outline: 0;
-    font-size: 100%;
-    vertical-align: baseline;
-    background: transparent;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    width: 200px;
+    background-color: #6b7280;
+    position: fixed;
+    height: 100vh;
+    overflow: auto;
+
 }
 
-#main {
-    background-color: #e1e8f0;
+li,
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    padding-bottom: 12px;
+    padding-left: 5px;
+    color: #f1f5f9;
+
 }
 
-ul,
-li {
-    font-weight: bold;
-    padding-left: 0;
-    justify-content: left;
-    list-style-type: none;
-    padding-bottom: 15px;
+.item-spacing {
+    padding-bottom: 30px;
 }
 
-button {
-    color: white;
-    background-color: #1c94d3;
-    border: 0;
-    border-radius: 14px;
-    width: 70px;
-    height: 25px;
-    margin-right: 30px;
-}
-
-img {
-    height: 50px;
-    width: auto;
-    border-radius: 24px;
-    margin-right: 15px;
-}
-
-.user-intro-text {
-    font-size: 13px;
-}
-
-.profile {
-    position: absolute;
-    top: -10px;
-    right: 130px;
-}
-
-.user-intro,
-.user-profile {
+svg {
+    vertical-align: middle;
     display: inline-block;
-    font-weight: bold;
-    margin-top: 5px;
-    position: absolute;
-}
-
-.profile-name {
-    margin-top: -1px;
-}
-
-.user-profile {
-    white-space: nowrap;
-    position: absolute;
-    right: 0;
-    top: -20px;
-    margin-right: 28vh;
-}
-
-.profile-image {
-    height: 30px;
-    width: auto;
-}
-
-
-.mt {
-    margin-top: 30px;
-}
-
-.user-section {
-
-    margin-right: 20px
-}
-
-.search-bar {
-    background-color: #e2e8f0;
-    border: 0;
-    border-radius: 10px;
-    width: 40%;
-    height: 4%;
-    padding-left: 1rem;
-    margin-top: 1rem;
-    position: absolute;
-    top: 0;
-    justify-content: center;
-}
-
-.buttons {
-    position: absolute;
-    grid-template-columns: 1fr 1fr 1fr;
-    margin-left: 740px;
-    margin-top: -35px;
-}
-
-#container {
-    height: 100vh;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 1fr auto;
-}
-
-
-#sidebar {
-    grid-row: 1;
-    grid-column: 1;
-    background-color: #1992d4;
-    color: white;
-    padding-left: 1rem;
-    padding-top: 1rem;
-    min-width: 120px;
-    height: 56vw;
-    grid-row: 1 / 3;
-}
-
-#header {
-    padding-left: 2rem;
-    padding-top: 2rem;
-    height: 100vh;
-}
-
-
-#sidebar>ul>li {
-    font-weight: bold
-}
-
-
-.dashboard-main>li {
-    padding-bottom: 2rem;
-    font-weight: 900;
-}
-
-.settings-spacing>li {
-    padding-top: 2rem;
-}
-
-#sidebar,
-.user-profile,
-.user-section,
-.buttons,
-#container {
-    display: grid;
-}
-
-#projects-grid {
-    width: 500px;
-    row-gap: 15px;
-    grid-row: 2;
-    grid-column: 2;
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-    column-gap: 15px;
-}
-
-#projects-grid>div {
-    border: 1px solid blue;
-}
-
-.iconify {
-    margin-right: 10px;
-    margin-bottom: -1px;
-}
-
-hr {
-    display: block;
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
-    margin-left: auto;
-    margin-right: auto;
-    border-style: inset;
-    border-width: 1px;
-}
-
-article h1 {
-    float: right;
-    margin-top: -480px;
-    margin-right: 243px;
-
-}
-
-#card {
-    margin-right: 113px;
-    margin-top: -450px;
-    position: absolute;
-    right: 0;
-    border: 1px solid blue;
-    border-radius: 6px;
-    width: 250px;
 }
